# launch-ccode-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config-sample.json
.github/workflows/: release.yml
.memory/: architecture.md  gotchas.md  key-files.md  patterns.md
assets/: lcc_strip_thinking.py  requirements-dev.txt
assets/tests/: conftest.py  test_strip_thinking.py
docs/superpowers/plans/: 2026-04-14-lcc-implementation.md  2026-05-15-lcc-proxy-autonome-v1.md
docs/superpowers/specs/: 2026-04-14-lcc-design.md  2026-05-15-lcc-proxy-autonome-design.md
src/: config.rs  lib.rs  main.rs  runner.rs
src/proxy/: cli.rs  health.rs  install.rs  keychain.rs  launchctl.rs  lifecycle.rs  mod.rs  provider_map.rs  reload.rs  status.rs  uninstall.rs
src/proxy/generators/: mod.rs  plist.rs  wrapper.rs  yaml.rs
tests/: config_test.rs  proxy_health_test.rs  proxy_plist_test.rs  proxy_provider_map_test.rs  proxy_wrapper_test.rs  proxy_yaml_test.rs  runner_test.rs
