[package]
name = "lcc"
version = "0.1.0"
edition = "2024"
authors = ["Romain Ecarnot <romain.ecarnot@gmail.com>"]
description = "A lightweight launcher to run Claude Code against any OpenAI/Anthropic-compatible provider (OpenRouter, Ollama, vLLM, …) with named profiles and runtime model switching."
license = "MIT"
readme = "README.md"
keywords = ["claude", "claude-code", "openrouter", "llm", "launcher"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/eRom/launch-ccode-cli"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
